--- a/backend/.env
+++ b/backend/.env
@@ -10,6 +10,11 @@ HOST=0.0.0.0
 PORT=8000
 DEBUG=True
 
+MANAGER_EMAIL=pf1testt@gmail.com
+GOOGLE_CALENDAR_ID=pf1testt@gmail.com
+# GMAIL_APP_PWD=nfmx yzjd habq husm
+GMAIL_APP_PWD_TWO=jvxj pwri oguq fisf
+
 # JWT Configuration
 SECRET_KEY=your-secret-key-here-change-this-in-production
 ALGORITHM=HS256
