--- a/backend/.env
+++ b/backend/.env
@@ -10,10 +10,15 @@ HOST=0.0.0.0
 PORT=8000
 DEBUG=True
 
+# Email Configuration
 MANAGER_EMAIL=pf1testt@gmail.com
 GOOGLE_CALENDAR_ID=pf1testt@gmail.com
-# GMAIL_APP_PWD=nfmx yzjd habq husm
-GMAIL_APP_PWD_TWO=jvxj pwri oguq fisf
+SMTP_SERVER=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USERNAME=pf1testt@gmail.com
+SMTP_PASSWORD=jitpoaoeokurjjnm
+FROM_EMAIL=pf1testt@gmail.com
+FRONTEND_URL=http://localhost:5173
 
 # JWT Configuration
 SECRET_KEY=your-secret-key-here-change-this-in-production
