--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,5 +8,7 @@ python-multipart==0.0.10
 google-generativeai==0.8.3
 python-dotenv==1.0.1
 pydantic==2.9.2
-bcrypt==4.2.0
+bcrypt==4.0.1
 Pillow==10.4.0
+opencv-python
+numpy
